--- a/.github/workflows/send_message.yml
+++ b/.github/workflows/send_message.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add history.json
+          git add historical_data.json
           git commit -m "Update history.json [skip ci]" || echo "No changes to commit"
           git push
